# opencv

./: ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  LightBarDetector.cpp  LightBarDetector.h  NumberRecognizer.cpp  NumberRecognizer.h  README.md  Utils.cpp  Utils.h  VIdioProcesser.cpp  VidioProcesser.h  main.cpp
open-cv/: open-cv.sln
open-cv/open-cv/: open cv.props
open-cv/open-cv/x64/Release/: open-cv.exe.recipe
